# Learn-Advanced-agentic-AI

./: .gitignore  pyproject.toml  requirements.txt
1_Basic_chatbot/: basic_chatbot.py
2_chatbot_with_tools/: chatbot_tools.py
3_first_agent_with_memory/: first_agent_with_memory.py
4_Human_assistance/: human_assistance_chatbot.py
5_multi_AI_agent_workflow/: multi_agent_workflow.py
6_Evaluation/: genAI_eval.py
7_LLM_gateway/: llm_gateway.py
